Feat:Add event-names below event icons

--- a/event/event.html
+++ b/event/event.html
@@ -107,16 +107,37 @@
             <div class="event0 event-block active">
                 <button class="eventDropdown">Geeks</button>
 
-                <h1 style="text-align: center; margin-bottom: 15px;">Geeks</h1>
+                <h1 style="text-align: center;">Geeks</h1>
 
                 <div class="el eventList">
-                    <div class="eventName"><img src="../images/icons/event_logos/irelay.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/Bug Bounty.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/iapp.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/iweb.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/fizzbuzz.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/idatabase.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/ipapyrus.png"></div>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/irelay.png">
+                        <figcaption class="caption">i.Relay</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/Bug Bounty.png">
+                        <figcaption class="caption">Bug Bounty</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/iapp.png">
+                        <figcaption class="caption">i.App</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/iweb.png">
+                        <figcaption class="caption">i.Web</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/fizzbuzz.png">
+                        <figcaption class="caption">Fizzbuzz</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/idatabase.png">
+                        <figcaption class="caption">i.Database</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/ipapyrus.png">
+                        <figcaption class="caption">i.Papyrus</figcaption>
+                    </figure>
 
                 </div>
 
@@ -828,9 +849,18 @@
                 <div class="el eventList">
                     <!--<div class="eventName"><img src="../images/icons/i.OHunt.png"></div>-->
                     <!--<div class="eventName"><img src="../images/icons/i.Decipher.png"></div>-->
-                    <div class="eventName"><img src="../images/icons/event_logos/ibiz.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/iganith.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/iquiz.png"></div>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/ibiz.png">
+                        <figcaption class="caption">i.Biz</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/iganith.png">
+                        <figcaption class="caption">i.Ganith</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/iquiz.png">
+                        <figcaption class="caption">i.Quiz</figcaption>
+                    </figure>
 
                 </div>
 
@@ -1174,14 +1204,38 @@
                 <h1 style="text-align: center; margin-bottom: 15px;">Out Of The Box</h1>
 
                 <div class="el eventList">
-                    <div class="eventName"><img src="../images/icons/event_logos/icapture.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/tresurehunt.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/iclash.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/icube.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/imaze.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/idesign.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/sellout.png"></div>
-                    <div class="eventName"><img src="../images/icons/event_logos/Chess64.png"></div>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/icapture.png">
+                        <figcaption class="caption">i.Capture</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/tresurehunt.png">
+                        <figcaption class="caption">Treasure Hunt</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/iclash.png">
+                        <figcaption class="caption">i.Clash</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/icube.png">
+                        <figcaption class="caption">i.Cube</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/imaze.png">
+                        <figcaption class="caption">i.Maze</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/idesign.png">
+                        <figcaption class="caption">i.Design</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/sellout.png">
+                        <figcaption class="caption">SellOut</figcaption>
+                    </figure>
+                    <figure class="eventName">
+                        <img src="../images/icons/event_logos/Chess64.png">
+                        <figcaption class="caption">Chess64</figcaption>
+                    </figure>
                 </div>
 
                 <div class="ed3 eventDescription">
