chore:Member added on Team page

--- a/team.html
+++ b/team.html
@@ -219,6 +219,20 @@
           <li>
             <div class="user">
               <div class="cont-image">
+                <img src="images/team/aayush_raval.jpg" />
+                <div class="overlay">
+                  <div class="text">
+                    <h3>Aayush Raval</h3>
+                    <h5>PR & Marketing</h5>
+                    <h5><a href="tel:+917405315402">+91 74053 15402</a></h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="user">
+              <div class="cont-image">
                 <img src="images/team/12.jpg" />
                 <div class="overlay">
                   <div class="text">
