fix:drop-down menu on event page

--- a/event/event.html
+++ b/event/event.html
@@ -87,7 +87,7 @@
 					<i style="text-align: center;font-size: 20px" class="fa fa-angle-down animated bounceIn infinite"></i>
 				</button>
             <ul class="clubList">
-                <li class="clubName selected" style="margin-top: 40px">GEEKS
+                <li class="clubName selected">GEEKS
                     <!-- <img src="images/events/software.png"> -->
                 </li>
                 <!--<li class="clubName">Electronics
