feat: add Terms&Conditions Razorpay
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -505,6 +505,27 @@
                   >here</a
                 >
               </p>
+              <p style="color: white; margin-top: 20px">
+                <a
+                  href="https://docs.google.com/document/d/1yqqWTE_jfC8F_u9UV9nLq3AUZR2wwpQGJigRJV3YQvg/pub"
+                  style="text-decoration: none; color: grey"
+                  >Privacy Policy</a
+                >
+              </p>
+              <p style="color: white">
+                <a
+                  href="https://docs.google.com/document/d/1bCwt0WccF7oDMBGAGRxtPgUfzqGzkUjtLnnE1JlL2dg/pub"
+                  style="text-decoration: none; color: grey"
+                  >Terms & Conditions</a
+                >
+              </p>
+              <p style="color: white">
+                <a
+                  href="https://docs.google.com/document/d/1xYM1QHm9S5phnkzyENqJ3KXv37schlsiTp0Id_4IMwE/pub"
+                  style="text-decoration: none; color: grey"
+                  >Cancellation/Refund Policy</a
+                >
+              </p>
 
               <!-- <div
                 class="row"
