--- a/index.html
+++ b/index.html
@@ -361,6 +361,11 @@
                 data-button_text="IEEE Members"
               ></script>
             </form>
+            <p style="color: white; font-size: 13px">
+              Pricing: <br />
+              ₹100 for General Participants <br />
+              ₹50 for IEEE members
+            </p>
             <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
               <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
             </a>
