chore: update Terms&Conditions
Signed-off-by: Meet Patel <patelmeet59@gmail.com>

--- a/index.html
+++ b/index.html
@@ -512,21 +512,21 @@
               </p>
               <p style="color: white; margin-top: 20px">
                 <a
-                  href="https://docs.google.com/document/d/1yqqWTE_jfC8F_u9UV9nLq3AUZR2wwpQGJigRJV3YQvg/pub"
+                  href="https://docs.google.com/document/d/1FtWh_kl-d8pMPRaKur1aol-ClkuQCIH4Kr7gi4SINEI/edit?usp=sharing"
                   style="text-decoration: none; color: grey"
                   >Privacy Policy</a
                 >
               </p>
               <p style="color: white">
                 <a
-                  href="https://docs.google.com/document/d/1bCwt0WccF7oDMBGAGRxtPgUfzqGzkUjtLnnE1JlL2dg/pub"
+                  href="https://docs.google.com/document/d/1QBY0wjXN4RGfmBv1bR21vWtBXoua1_UqNlDmOJWRVMY/edit?usp=sharing"
                   style="text-decoration: none; color: grey"
                   >Terms & Conditions</a
                 >
               </p>
               <p style="color: white">
                 <a
-                  href="https://docs.google.com/document/d/1xYM1QHm9S5phnkzyENqJ3KXv37schlsiTp0Id_4IMwE/pub"
+                  href="https://docs.google.com/document/d/1tIZNRglbiszilfGdH6pSB4oWKL8noXm4-9EyIf3uADU/edit?usp=sharing"
                   style="text-decoration: none; color: grey"
                   >Cancellation/Refund Policy</a
                 >
