feat:Add Event Details !

--- a/team.html
+++ b/team.html
@@ -360,7 +360,7 @@
                 <img src="images/team/Devyani.jpeg" />
                 <div class="overlay">
                   <div class="text">
-                    <h3>Devynai Panchal</h3>
+                    <h3>Devyani Panchal</h3>
                     <h5>Sponsorship</h5>
                     <h5><a href="tel:+919824413747">+91 98244 13747</a></h5>
                   </div>
