chore:added general rules for i.Cube

--- a/event/event.html
+++ b/event/event.html
@@ -1000,7 +1000,12 @@
                         <div class="content">
                             <p>
 				                <ul>
-
+                                    i.Cube will consist of the following 5 events:<br>
+                                        <br><li><strong>2 X 2</strong><br>Take the pocket cube out of your pockets and show us how your hands handle it.</li>
+                                        <br><li><strong>3 X 3</strong><br>Solving a 3x3 might not be a tough task but solving it faster is not a peice of cake.</li>
+                                        <br><li><strong>3 X 3 one handed</strong><br>Solving a puzzle with both of your hands is old school, why not do it single handedly.</li>
+                                        <br><li><strong>Pyraminx</strong><br> It took historians hundreds of years to solve mysteries of pyramid let's see you do in matter of seconds.</li>
+                                        <br><li><strong>Skewb</strong><br>Solve it in seconds, if you have figured out how it turns.</li>
                                 </ul>
                             </p>
                         </div>
