chore:add prize details for all events

--- a/event/event.html
+++ b/event/event.html
@@ -177,7 +177,7 @@
                         <button class="collapsible">
 								<i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 3K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -232,7 +232,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 2K</b></p>
                         </div>
 
                         <button class="collapsible">
@@ -283,7 +283,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 3K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -347,7 +347,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 3K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -396,7 +396,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 7K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -444,7 +444,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 4.5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -499,7 +499,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 2K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -597,7 +597,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -659,7 +659,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -707,7 +707,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 3K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -801,7 +801,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 3K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -852,7 +852,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 6K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -964,7 +964,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 15K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1014,7 +1014,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 13K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1070,7 +1070,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1124,7 +1124,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b> 4K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1203,7 +1203,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon...</b></p>
+                            <p><b>Prizes worth: 10K</b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1253,7 +1253,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: To be announced soon... </b></p>
+                            <p><b>Prizes worth: 5K </b></p>
                         </div>
 
                         <button class="collapsible">
