--- a/event/event.html
+++ b/event/event.html
@@ -432,12 +432,12 @@
                             <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp&nbsp&nbsp General Rules</button>
                         <div class="content">
                             <p>
-                                <ul>
+                                <!--<ul>
                                     <li>An event for machine learning and data science enthusiastics.</li>
                                     <li>Complete the challenge on the kaggle during the time period allocated.</li>
                                     <li>There should be no piracy. Will be checked thurly.</li>
                                     <li>Write Readable, commented, well indented code. If there is a tie in accuracy, how well the code is written will be checked.</li>
-                                </ul>
+                                </ul>-->
                             </p>
                         </div>
 
@@ -450,17 +450,17 @@
                         <button class="collapsible">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
-                            <p>Venue : Online event <br> Time :1PM - 3PM   <br> Date : November 22 </p>
+                            <p><!--Venue : Online event <br> Time :1PM - 3PM   <br> Date : November 22 --></p>
                         </div>
 
                         <button class="collapsible">
                                 <i class="fa fa-address-card" aria-hidden="true"></i>&nbsp&nbsp&nbsp Contact Details</button>
                         <div class="content">
                             <p>
-                                <ul>
+                                <!--<ul>
                                     <li>Jui: <a href="tel:+919409407341">  9409407341</a></li>
                                     <li>Harsh: <a href="tel:+919510506633"> 9510506633 </a></li>
-                                </ul>
+                                </ul>-->
                             </p>
                         </div>
                     </div>
