chore:add details for i.Database

--- a/event/event.html
+++ b/event/event.html
@@ -432,12 +432,11 @@
                             <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp&nbsp&nbsp General Rules</button>
                         <div class="content">
                             <p>
-                                <!--<ul>
-                                    <li>An event for machine learning and data science enthusiastics.</li>
-                                    <li>Complete the challenge on the kaggle during the time period allocated.</li>
-                                    <li>There should be no piracy. Will be checked thurly.</li>
-                                    <li>Write Readable, commented, well indented code. If there is a tie in accuracy, how well the code is written will be checked.</li>
-                                </ul>-->
+                                <ul>
+                                   <li>i.Database is an online quiz based on Database and Query questions.</li>
+                                   <li>The event duration is 2 hours.</li>
+                                   <li>In any case of discrepancy, the decision of the co-ordinators and Team i.Fest '20 stands final.</li>
+                                </ul>
                             </p>
                         </div>
 
@@ -450,7 +449,7 @@
                         <button class="collapsible">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp&nbsp&nbsp Venue &amp; Timing</button>
                         <div class="content">
-                            <p><!--Venue : Online event <br> Time :1PM - 3PM   <br> Date : November 22 --></p>
+                            <p>Venue : Online event <br> Time :10AM - 12PM   <br> Date : November 22 </p>
                         </div>
 
                         <button class="collapsible">
