chore:minor changes

--- a/event/event.html
+++ b/event/event.html
@@ -1123,7 +1123,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b> 4K </b></p>
+                            <p><b> 5K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1159,43 +1159,36 @@
                                 <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp&nbsp&nbsp General Rules</button>
                         <div class="content">
                             <p>
-                <ul> To be announced soon...</ul>
-<!--                                 <b>Round 1 : Chain Round
-                                    </b>
-                                <ul>
-                                    <li>A simple maze will be given initially which needs to be solved in order to reach the starting question of the chain.
-                                    </li>
-                                    <li>The chain will then follow, i.e. every answer will take you to the next question.
-                                    </li>
-                                    <li>The question paper will also contain a few dummy questions which upon solving will cost half a point each.
-                                    </li>
-                                    <li>Time: 60 minutes
-                                    </li>
-                                </ul>
-                                <b>Round 2 : The Maze Round
-                                    </b>
-                                <ul>
-                                    <li>Several mazes would be given to each team.
-                                    </li>
-                                    <li>Each maze will have certain checkpoints which will contain hints that will point to a certain thing/place/person. The contestants need to identify those with the help of hints. </li>
-                                    <li>The contestant with the maximum number of correctly solved mazes will win.
-                                    </li>
-                                </ul>
-                                <b>Round 3 : Rapid Fire
-                                    </b>
-                                <ul>
-                                    <li>This will be a rapid fire round.</li>
-                                    <li>The finalists will be given puzzles and whoever solves a particular puzzle correctly in the minimum amount of time gets points.</li>
-                                    <li>Negative points will be given for incorrect answers.
-                                    </li>
-                                    <li>The contestant with the maximum points wins. </li>
-                                </ul>
-                                <b>Rules &amp; Regulation :</b>
-                                <ul>
-                                    <li>Use of any kind of electronic devices like calculators/mobile phones etc. during the event is <b>NOT</b> allowed.</li>
-                                    <li>Any malpractice will result in termination from the event.</li>
-                                    <li>In any scenario, decision of the event coordinators will be final.</li>
-                                </ul> -->
+                                 <ul>
+                                    <li>Once the registrations for the individual events open, a form to register for the event would be available on the i.fest platform.</li>
+                                    <li>The participants are required to register through this site.</li>
+                                    <li>Further details regarding the joining in the Discord platform would be made available.</li>
+                                    <strong>Round 1</strong>
+                                    <li>This round requires the participants to try to sell out the products they’ve chosen.</li>
+                                    <li>This round will be conducted on Discord.</li>
+                                    <li>Participants will be given a choice of 10 products to choose from. They are free to choose any one of them.</li>
+                                    <li>Once the topics have been chosen, they will be given 10 minutes to contemplate about their respective topics.</li>
+                                    <li>The participants are required to join the discord voice channel allocated to them.</li>
+                                    <li>The presentation time for this round is 2 minutes.</li>
+                                    <li>The best 10 participants will be chosen for round 2.</li>
+                                    <li>In case of any discrepancy, the decision of the (respective authority) will be final.</li> 
+                                    <strong>Judging criteria will be:</strong>
+                                    <li>Presentation/Delivery</li>
+                                    <li>Creativity</li>
+                                    <li>Convincing ability</li>
+                                    <strong>Round 2</strong>
+                                    <li>This round requires the participants to try to solve a problem statement given to them.</li>
+                                    <li>This round will be conducted on Discord.</li>
+                                    <li>Once the topics have been chosen, they will be given 20 minutes to contemplate about their respective topics.</li>
+                                    <li>The participants are required to join the discord voice channel allocated to them.</li>
+                                    <li>The presentation time for this round is 5 minutes. It will be followed by a questionnaire.</li>
+                                    <li> Participants can make use of slides/ppts/flowchart if they wish to and present their solutions to the given problem.</li>
+                                    <li>In case of any discrepancy, the decision of the (respective authority) will be final.</li> 
+                                    <strong>Judging criteria will be:</strong>
+                                    <li>Presentation/Delivery</li>
+                                    <li>Creativity</li>
+                                    <li>Convincing ability</li>  
+                                 </ul>
                             </p>
                         </div>
 
