--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         class="fullpage fullpage-scroll"
         data-section-name="tic-tech-toe"
       >
-        <div class="img-wrap"><img src="images/TicTechToePoster.png" /></div>
+        <div class="img-wrap"><img src="/images/Gauravkapoor.png" /></div>
       </div>
 
       <!-- Till -->
