chore: Minor Changes

--- a/event/event.html
+++ b/event/event.html
@@ -1013,7 +1013,7 @@
                         <button class="collapsible">
                             <i class="fa fa-inr" aria-hidden="true"></i>&nbsp&nbsp&nbsp Prize Details</button>
                         <div class="content">
-                            <p><b>Prizes worth: 13K </b></p>
+                            <p><b>Prizes worth: 22K </b></p>
                         </div>
 
                         <button class="collapsible">
@@ -1234,10 +1234,16 @@
                             <p>
                                 <ul>
                                     <li>Fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_VMpv2wz6qHCMOsMwae6q56hI_7S8U6qsmtbPqTUFtzmMMg/closedform" target="blank">form</a> to register for the tournament.</li>
-                                    <li>Tournament will be played in swiss format. To know more about this format, go <a href="https://en.wikipedia.org/wiki/Swiss-system_tournament">here</a>.</li>
-                                    <li>For specific queries related to Lichess platform and online format, go <a href="https://lichess.org/swiss">here</a>.</li>
-                                    <li>The tournament is going to be conducted on <a href="https://lichess.org/">Lichess platform</a>. So, if you don’t have a Lichess account, go to Lichess and make your account.</li>
-                                    <li>You can take part in the tournament if and only if you are a part of the team on Lichess, so we have created our team; click <a href="https://lichess.org/team/chess64-ifest">here</a> to request for joining the team of Chess64. Only registered players (who have filled google form given above) will be accepted in the team after verification of details from received responses. Such accepted players will be able to play only.</li>
+                                    <li>Tournament will be played in swiss format. To know more about this format, go <a href="https://en.wikipedia.org/wiki/Swiss-system_tournament" target="blank">here</a>.</li>
+                                    <li>For specific queries related to Lichess platform and online format, go <a href="https://lichess.org/swiss" target="blank">here</a>.</li>
+                                    <li>The tournament is going to be conducted on <a href="https://lichess.org/" target="blank">Lichess platform</a>. So, if you don’t have a Lichess account, go to Lichess and make your account.</li>
+                                    <li>You can take part in the tournament if and only if you are a part of the team on Lichess, so we have created our team; click <a href="https://lichess.org/team/chess64-ifest" target="blank">here</a> to request for joining the team of Chess64. Only registered players (who have filled google form given above) will be accepted in the team after verification of details from received responses. Such accepted players will be able to play only.</li>
+                                    <strong>Note: Team and tournament can be accessed only through the browser as the app hasn't been updated with such features.</strong>
+                                    <li>Once you join the team, you will be able to see the tournament. <strong>Join</strong> in that tournament and appropriate pairing will be done after commencement of the tournament.</li>
+                                    <strong>The details for the same are as follows:</strong>
+                                    <li>Number of Rounds : 8</li>
+                                    <li>Time Control: 10 mins + 2 secs for each</li>
+                                    <li>Break between rounds: 2 minutes</li>
                                 </ul>
                             </p>
                         </div>
