--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
               ₹100 for General Participants <br />
               ₹50 for IEEE members
             </p>
-            <a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
+            <!--<a href="http://ifest.daiict.ac.in/tic-tech-toe" target="_blank">
               <img id="tictechtoelogo" src="images/tictechtoelogo.png" />
-            </a>
+            </a>-->
           </div>
         </div>
       </div>
