--- a/sponsors.html
+++ b/sponsors.html
@@ -135,6 +135,9 @@
       <a href="https://www.blackposition.in/" target="_blank">
         <li><img src="images/sponsors/black_position.jpeg" /></li>
       </a>
+      <a href="https://www.finstreet.in/events" target="_blank">
+        <li><img src="images/sponsors/Finstreet.png" /></li>
+      </a>
     </ul>
 
     <div class="page-title">
